--- a/index.html
+++ b/index.html
@@ -93,24 +93,7 @@ const familyData = {
       "name": "Akkel Ali Mdridha",
       "children": [
         {"name": "Md. Anes Mridha"},
-        {"name": "Md. Abser Kerani",
-                      "children": [
-                      {"name": "Manik",
-                                        "children": [
-                                        {"name": "a"},
-                                        {"name": "b"}]
-                                      
-                      },
-                      {"name": "2"},
-                      {"name": "3"},
-                      {"name": "4"},
-                      {"name": "5"},
-                      {"name": "6"},
-                      {"name": "7"},
-                      {"name": "8"},
-                      {"name": "9"},
-                      {"name": "Lotif"}]                                   
-                                        },
+        {"name": "Md. Abser Kerani"},
         {"name": "Md. Afes Mridha"},
         {"name": "Md. Momin Uddin Mridha"},
         {"name": "Md. Hossen Uddin Mridha"},
@@ -153,6 +136,7 @@ treeContainer.appendChild(ulRoot);
 
 </body>
 </html>
+
 
 
 
