--- a/index.html
+++ b/index.html
@@ -119,14 +119,7 @@ const familyData = {
       "name": "Akkel Ali Mdridha",
       "children": [
         {"name": "Md. Anes Mridha"},
-        {
-          "name": "Md. Abser Mridha",
-          "children": [
-            {"name": "Child 1"},
-            {"name": "Child 2"},
-            {"name": "Child 3"}
-          ]
-        },
+        {"name": "Md. Abser Mridha"},
         {"name": "Md. Afes Mridha"},
         {"name": "Md. Momin Uddin Mridha"},
         {"name": "Md. Hossen Uddin Mridha"},
@@ -192,3 +185,4 @@ if (abser && abser.children) {
 
 </body>
 </html>
+
