--- a/index.html
+++ b/index.html
@@ -95,20 +95,7 @@ const familyData = {
         {"name": "Md. Anes Mridha"},
         {"name": "Md. Abser Kerani",
                       "children": [
-                      {"name": "Manik",
-                                        "children": [
-                                        {"name": "a"},
-                                        {"name": "b"}]
-                                      
-                      },
-                      {"name": "2"},
-                      {"name": "3"},
-                      {"name": "4"},
-                      {"name": "5"},
-                      {"name": "6"},
-                      {"name": "7"},
-                      {"name": "8"},
-                      {"name": "9"},
+                      {"name": "Manik"},
                       {"name": "Lotif"}]                                   
                                         },
         {"name": "Md. Afes Mridha"},
@@ -153,6 +140,7 @@ treeContainer.appendChild(ulRoot);
 
 </body>
 </html>
+
 
 
 
