--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ h1 {
 .tree {
   display: flex;
   justify-content: center;
+  overflow-x: auto;
 }
 
 ul {
@@ -66,26 +67,30 @@ li div {
   color: #333;
   position: relative;
   z-index: 1;
+  box-shadow: 2px 4px 8px rgba(0,0,0,0.1);
 }
 
-ul ul::before {
-  content: '';
-  position: absolute;
-  top: -20px;
-  left: 50%;
-  border-left: 2px solid #333;
-  height: 20px;
+li div ul {
+  margin: 8px 0 0;
+  padding: 0;
+  list-style: none;
+}
+
+li div ul li {
+  display: block;
+  padding: 4px 0;
+  border: none;
 }
 </style>
 </head>
 <body>
 
-<h1>Mdridha Family Tree</h1>
+<h1>Mridha Family Tree</h1>
 
 <div class="tree" id="familyTree"></div>
 
 <script>
-// Corrected family data
+// Family data
 const familyData = {
   "name": "Babar Ali Haolader",
   "children": [
@@ -93,11 +98,12 @@ const familyData = {
       "name": "Akkel Ali Mdridha",
       "children": [
         {"name": "Md. Anes Mridha"},
-        {"name": "Md. Abser Kerani",
-                      "children": [
-                      {"name": "Manik"},
-                      {"name": "Lotif"}]                                   
-                                        },
+        {
+          "name": "Md. Abser Kerani",
+          "children": [
+            {"list": ["Manik","Lotif"]}  // Manik & Lotif এক বক্সে লিস্ট
+          ]
+        },
         {"name": "Md. Afes Mridha"},
         {"name": "Md. Momin Uddin Mridha"},
         {"name": "Md. Hossen Uddin Mridha"},
@@ -121,30 +127,10 @@ const treeContainer = document.getElementById('familyTree');
 
 function createTree(member) {
   const li = document.createElement('li');
-  li.innerHTML = `<div>${member.name}</div>`;
+  const div = document.createElement('div');
 
-  if (member.children && member.children.length > 0) {
-    const ul = document.createElement('ul');
-    member.children.forEach(child => {
-      ul.appendChild(createTree(child));
-    });
-    li.appendChild(ul);
+  if (member.name) {
+    div.textContent = member.name;
   }
-  return li;
-}
-
-const ulRoot = document.createElement('ul');
-ulRoot.appendChild(createTree(familyData));
-treeContainer.appendChild(ulRoot);
-</script>
-
-</body>
-</html>
-
-
-
-
-
-
-
-
+  if (member.list) {
+    div.innerHTML = `<
