--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ h1 {
 ul {
   padding-top: 20px;
   position: relative;
-  display: table; /* মূল লেভেল টেবিলের মতো থাকবে */
+  display: table;
   margin: 0 auto;
 }
 
@@ -77,20 +77,23 @@ ul ul::before {
   height: 20px;
 }
 
-/* ✅ নতুন স্টাইল – যাতে Manik ও Lotif এক কলামে আসে */
+/* ✅ শুধু শেষ লেভেলের জন্য আলাদা */
+li ul:empty { display: none; }
+
 li ul li {
-  display: block; /* side-by-side না হয়ে একটার নিচে একটা */
-  margin: 10px auto;
+  display: block;   /* শেষ row কে ব্লক আকারে এক কলামে দেখাবে */
+  margin: 5px 0;
 }
 </style>
 </head>
 <body>
 
-<h1>Mridha Family Tree</h1>
+<h1>Mdridha Family Tree</h1>
 
 <div class="tree" id="familyTree"></div>
 
 <script>
+// Corrected family data
 const familyData = {
   "name": "Babar Ali Haolader",
   "children": [
@@ -102,7 +105,8 @@ const familyData = {
           "children": [
             {"name": "Manik"},
             {"name": "Lotif"}
-          ]},
+          ]
+        },
         {"name": "Md. Afes Mridha"},
         {"name": "Md. Momin Uddin Mridha"},
         {"name": "Md. Hossen Uddin Mridha"},
